[package]
name = "apex-tux"
version = "1.0.3"
edition = "2021"

[workspace]

members = [
    "apex-ctl",
    "apex-hardware",
    "apex-mpris2",
    "apex-music",
    "apex-simulator",
    "apex-input",
    "apex-engine",
    "apex-windows"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apex-hardware = { path = "./apex-hardware", features = ["async"] }

anyhow = "1.0.98"
tokio = { version = "1.47.0", features = ["time", "net", "macros", "rt-multi-thread", "sync"] }
futures-core = "0.3.31"
futures = "0.3.31"
async-stream = "0.3.6"
embedded-graphics = "0.8.1"
serde = { version = "1.0.180", optional = true, features = ["derive"] }
log = "0.4.27"
image  = { version = "0.25.6", optional = true }

num_enum = "0.5"
tinybmp = "0.6.0"
config = { version = "0.11.0", features = ["toml"] }
linkme = "0.2"
ctrlc = "3.2.0"
simplelog = "0.10.0"
pin-project-lite = "0.2.7"
itertools = "0.10.1"
async-rwlock = "1.3.0"
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.11.27", optional = true, features = ["json", "brotli", "stream", "gzip", "deflate"] }
chrono = "0.4.38"
toml = "0.5.8"
num-traits = "0.2.14"
apex-input = {path = "./apex-input" }
apex-music = { path = "./apex-music" }
apex-simulator = { path = "./apex-simulator", optional = true }
apex-engine = { path = "./apex-engine", optional = true }
sysinfo = { version = "0.27.8", optional = true }
lazy_static = "1.5.0"
dirs = "5.0.1"


[target.'cfg(target_os = "windows")'.dependencies]
apex-windows = {path = "./apex-windows"}


[target.'cfg(target_os = "linux")'.dependencies]
apex-mpris2 = { path = "./apex-mpris2", optional = true }
dbus = { version = "0.9.7", optional = true, features = ["vendored"] }
dbus-tokio = { version = "0.7.6", optional = true }

[features]
default = ["dbus-support", "crypto", "usb"]
dbus-support = ["dbus", "dbus-tokio", "apex-mpris2"]
http = ["serde", "serde_json", "reqwest"]
crypto = ["http"]
simulator = ["apex-simulator"]
usb = ["apex-hardware/usb"]
hotkeys = ["apex-input/hotkeys"]
engine = ["apex-engine"]
sysinfo = ["dep:sysinfo"]
image = ["dep:image"]
debug = []
