[package]
name = "apex-tux"
version = "1.0.4"
edition = "2021"

[workspace]

members = [
    "apex-ctl",
    "apex-hardware",
    "apex-mpris2",
    "apex-music",
    "apex-simulator",
    "apex-input",
    "apex-engine",
    "apex-windows"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apex-hardware = { path = "./apex-hardware", features = ["async"] }


anyhow = "1"
tokio = { version = "1", features = ["time", "net", "macros", "rt-multi-thread", "sync"] }
num_enum = "0.7"
embedded-graphics = "0.8"
tinybmp = "0.6"
config = { version = "0.11", features = ["toml"] }
futures-core = "0.3"
async-stream = "0.3"
futures = "0.3"
linkme = "0.2"
log = "0.4"

ctrlc = "3"
simplelog = "0.12"
pin-project-lite = "0.2"
itertools = "0.14"
chrono = "0.4"
toml = "0.9"
num-traits = "0.2"
apex-input = {path = "./apex-input" }
apex-music = { path = "./apex-music" }
apex-simulator = { path = "./apex-simulator", optional = true }
apex-engine = { path = "./apex-engine", optional = true }
sysinfo = { version = "0.27.7", optional = true }
image  = { version = "0.25", optional = true }
dirs = "6"


[target.'cfg(target_os = "windows")'.dependencies]
apex-windows = {path = "./apex-windows"}


[target.'cfg(target_os = "linux")'.dependencies]
apex-mpris2 = { path = "./apex-mpris2", optional = true }
dbus = { version = "0.9", optional = true }
dbus-tokio = { version = "0.7.6", optional = true }

[features]
default = ["dbus-support", "usb"]
dbus-support = ["dbus", "dbus-tokio", "apex-mpris2"]
simulator = ["apex-simulator"]
usb = ["apex-hardware/usb"]
hotkeys = ["apex-input/hotkeys"]
engine = ["apex-engine"]
sysinfo = ["dep:sysinfo"]
image = ["dep:image"]
debug = []
