[package]
name = "apex-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
log = "0.4.14"
simplelog = "0.10.2"
apex-hardware = { path = "../apex-hardware", features= ["usb"] }