[package]
name = "apex-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamesense = { git = "https://github.com/not-jan/gamesense" }
anyhow = "1"
apex-hardware = { path = "../apex-hardware", features = ["async"] }
tokio = {version = "1", features=["time", "net", "macros", "rt-multi-thread", "sync"]}
log = "0.4.14"
