[package]
name = "apex-hardware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
usb = ["hidapi"]
async = []

[dependencies]
anyhow = "1.0.98"
bitvec = "1.0.1"
embedded-graphics = "0.8.1"
hidapi = { version = "1.5.0", optional = true }
num_enum = "0.5.11"
