[package]
name = "apex-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.45", optional = true }
tauri-hotkey = { version = "0.1.2", optional = true }
tokio = { version = "1.13.0", features = ["sync"], optional = true }

[features]
default = []
hotkeys = ["tauri-hotkey", "anyhow", "tokio"]
