[package]
name = "apex-sysinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmedium = { version = "0.7.0", optional = true }

[build-dependencies]
bindgen = "0.63.0"

[features]
default = ["cpuinfo", "hwmon"]
cpuinfo = []
hwmon = ["libmedium"]
